@@ -19,6 +19,9 @@
 #'
 #'#Set a component
 #'scheme(example_url) <- "https"
+#'
+#'# NA out the URL
+#'scheme(example_url) <- NA
 #'@import methods
 #'@export
 scheme <- function(x){
