@@ -26,6 +26,9 @@ scheme(example_url)
 
 #Set a component
 scheme(example_url) <- "https"
+
+# NA out the URL
+scheme(example_url) <- NA
 }
 \seealso{
 \code{\link{domain}}, \code{\link{port}}, \code{\link{path}},
